Custom base image, use ShenandoahGC to be nicer in shared hosting environments.